
        Note that the name has to be 'index.html' for the exception
        view to work. (patch by Sidnei da Silva from Enfold,
        integration by Martijn Faassen (Startifact) for Infrae)

      - DateTime now uses pytz for time zone data. This means support
        for more time zones and up to date daylight saving time
        information.

    Bugs Fixed

      - DateTime conversion of datetime objects with non-pytz tzinfo. 
        Timezones() returns a copy of the timezone list (allows tests to run).

      - LP #253362: better dealing with malformed HTTP_ACCEPT_CHARSET headers

      - Launchpad #246748: added 'immediate' option to sendXXX() methods
        for sending a mail immediately by-passing the zope.sendmail delivery
        mechanism

      - Launchpad #246290: fixed backward compatibility issue

      - Launchpad #245649:  the Products package is now a proper
        "namespace package" under the rules specified by setuptools.

      - fixed outdated transaction.commit(1) call in 
        ZODBMountPoint.SimpleTrailblazer

      - Fixed against-the-rules zope.conf option 'fast_listen' to read
        'fast-listen' (dash, not underscore).

      - Switch to branch of 'zope.testbrowser' external which suppresses
        over-the-wire tests.

      - Launchpad #164783: Indexes were migrated on initial creation of a
        ZODB.

      - Launchpad #151020: HTTP_CHAR_SET headers containing 'x-user-defined'
        caused a LookupError exception. Unknown encodings are from now on
        silently discarded.

      - Launchpad #143902: Fixed App.ImageFile to use a stream iterator to
        output the file. Avoid loading the file content when guessing the
        mimetype and only load the first 1024 bytes of the file when it cannot
        be guessed from the filename.

      - Changed PageTemplateFile not to load the file contents on Zope startup
        anymore but on first access instead. This brings them inline with the